Bug 20505 - warning: Could not load shared library symbols for linux-vdso.so.1 (debugging core file)
Summary: warning: Could not load shared library symbols for linux-vdso.so.1 (debugging...
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: gdb (show other bugs)
Version: 7.12
: P2 normal
Target Milestone: 7.12
Assignee: Pedro Alves
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-22 19:16 UTC by Pedro Alves
Modified: 2016-08-22 19:27 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pedro Alves 2016-08-22 19:16:39 UTC
Loading a core dump that was either generated on a system running
pristine glibc master, or on a Fedora/RHEL system with LD_DEBUG=unused
set in the environment results in the following warning:

  (gdb) core-file corefile.core^M
  [New LWP 2362]^M
  warning: Could not load shared library symbols for linux-vdso.so.1.^M
  Do you need "set solib-search-path" or "set sysroot"?^M
  Core was generated by `build-gdb/gdb/testsuite/outputs/gdb.base/corefile/'.^M
  ...

This is just like PR14466 - unable to load symbols for linux-gate.so.1 (vdso),
except that PR only fixed the live inferior case.  I.e., the core files case still warns.
Comment 1 Sourceware Commits 2016-08-22 19:22:48 UTC
The master branch has been updated by Pedro Alves <palves@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=6bb90213cb7b8e2f3be20f2e46f11f57f0c9ce55

commit 6bb90213cb7b8e2f3be20f2e46f11f57f0c9ce55
Author: Pedro Alves <palves@redhat.com>
Date:   Mon Aug 22 20:05:09 2016 +0100

    Fix PR gdb/20505 - Make vDSO detection work with core files
    
    Loading a core dump that was either generated on a system running
    pristine glibc master, or on a Fedora/RHEL system with LD_DEBUG=unused
    set in the environment, solib-svr4.c:svr4_current_sos fails to filter
    out the vDSO, resulting in:
    
      (gdb) core-file corefile.core^M
      [New LWP 2362]^M
      warning: Could not load shared library symbols for linux-vdso.so.1.^M
      Do you need "set solib-search-path" or "set sysroot"?^M
      Core was generated by `build-gdb/gdb/testsuite/outputs/gdb.base/corefile/'.^M
      ...
    
    The problem is that gdbarch_vsyscall_range does not support core
    inferiors at all.
    
    When live debugging, we're finding the vDSO's start address with
    auxv/AT_SYSINFO_EHDR, and then we find the vDSO's size by look for the
    corresponding mapping, by parsing /proc/PID/maps.  When debugging a
    core dump, we can also determine the starting address from
    auxv/AT_SYSINFO_EHDR.  However, we obviously can't read the core
    mappings out of the host's /proc.  But we can instead look for a
    corresponding load segment in the core's bfd.
    
    gdb/ChangeLog:
    2016-08-22  Pedro Alves  <palves@redhat.com>
    
    	PR gdb/20505
    	* linux-tdep.c (linux_vsyscall_range_raw): For core inferiors,
    	find the vDSO's start address with AT_SYSINFO_EHDR too, and
    	determine the vDSO's size by finding the PT_LOAD segment that
    	matches AT_SYSINFO_EHDR.
    
    gdb/testsuite/ChangeLog:
    2016-08-22  Pedro Alves  <palves@redhat.com>
    
    	PR gdb/20505
    	* gdb.base/vdso-warning.exp: Test core dumps too.  Use
    	with_test_prefix.  Factor out bits to ...
    	(test_no_vdso): ... this new procedure.
Comment 2 Sourceware Commits 2016-08-22 19:26:04 UTC
The gdb-7.12-branch branch has been updated by Pedro Alves <palves@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=601a2a8f639f9ef6dab86118a87fa67861f2091e

commit 601a2a8f639f9ef6dab86118a87fa67861f2091e
Author: Pedro Alves <palves@redhat.com>
Date:   Mon Aug 22 20:22:35 2016 +0100

    Fix PR gdb/20505 - Make vDSO detection work with core files
    
    Loading a core dump that was either generated on a system running
    pristine glibc master, or on a Fedora/RHEL system with LD_DEBUG=unused
    set in the environment, solib-svr4.c:svr4_current_sos fails to filter
    out the vDSO, resulting in:
    
      (gdb) core-file corefile.core^M
      [New LWP 2362]^M
      warning: Could not load shared library symbols for linux-vdso.so.1.^M
      Do you need "set solib-search-path" or "set sysroot"?^M
      Core was generated by `build-gdb/gdb/testsuite/outputs/gdb.base/corefile/'.^M
      ...
    
    The problem is that gdbarch_vsyscall_range does not support core
    inferiors at all.
    
    When live debugging, we're finding the vDSO's start address with
    auxv/AT_SYSINFO_EHDR, and then we find the vDSO's size by look for the
    corresponding mapping, by parsing /proc/PID/maps.  When debugging a
    core dump, we can also determine the starting address from
    auxv/AT_SYSINFO_EHDR.  However, we obviously can't read the core
    mappings out of the host's /proc.  But we can instead look for a
    corresponding load segment in the core's bfd.
    
    gdb/ChangeLog:
    2016-08-22  Pedro Alves  <palves@redhat.com>
    
    	PR gdb/20505
    	* linux-tdep.c (linux_vsyscall_range_raw): For core inferiors,
    	find the vDSO's start address with AT_SYSINFO_EHDR too, and
    	determine the vDSO's size by finding the PT_LOAD segment that
    	matches AT_SYSINFO_EHDR.
    
    gdb/testsuite/ChangeLog:
    2016-08-22  Pedro Alves  <palves@redhat.com>
    
    	PR gdb/20505
    	* gdb.base/vdso-warning.exp: Test core dumps too.  Use
    	with_test_prefix.  Factor out bits to ...
    	(test_no_vdso): ... this new procedure.
Comment 3 Pedro Alves 2016-08-22 19:27:12 UTC
Fixed.